--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,103 @@
-// TODO
+.header {
+  margin: 40px auto 39.37px;
+}
+
+.container {
+  margin: 80px auto;
+  max-width: 721px;
+}
+
+.post {
+  margin: 0 10.5px;
+
+  h1 {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 58px;
+
+    letter-spacing: -0.5px;
+
+    color: var(--heading);
+
+    margin-bottom: 24px;
+  }
+}
+
+.info {
+  display: flex;
+
+  margin-bottom: 64px;
+
+  div {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    & + div {
+      margin-left: 24px;
+    }
+  }
+
+  time,
+  p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+
+    color: var(--info);
+
+    svg {
+      width: 20px;
+      height: 20px;
+      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    }
+  }
+}
+
+.content {
+  strong {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 50px;
+
+    text-align: justify;
+
+    color: var(--heading);
+
+    & + div {
+      margin-top: 50px;
+      margin-bottom: 50px;
+    }
+  }
+
+  div {
+    strong {
+      font-weight: 700;
+      font-size: 18px;
+      line-height: 25px;
+
+      text-align: justify;
+    }
+
+    p {
+      font-weight: 400;
+      font-size: 18px;
+      line-height: 25px;
+
+      text-align: justify;
+
+      color: var(--body);
+    }
+    a {
+      color: var(--highlight);
+    }
+
+    ul {
+      margin-top: 25px;
+
+      li {
+        margin-bottom: 25px;
+      }
+    }
+  }
+}
