--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -23,7 +23,26 @@
   }
 
   aside {
-    margin-top: 60px;
+    margin: 88px auto 0;
+
+    a {
+      height: 58px;
+      width: 700px;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      border-radius: 4px;
+
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 22px;
+      text-align: justify;
+
+      color: var(--background);
+      background: var(--heading);
+    }
   }
 }
 
