--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -21,12 +21,19 @@
 
     margin-bottom: 24px;
   }
+
+  & > p {
+    font-style: italic;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+
+    color: var(--info);
+  }
 }
 
 .info {
   display: flex;
-
-  margin-bottom: 64px;
 
   div {
     display: flex;
@@ -52,9 +59,15 @@
       filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     }
   }
+
+  & + p {
+    margin-top: 16px;
+  }
 }
 
 .content {
+  margin-top: 64px;
+
   strong {
     font-weight: 700;
     font-size: 36px;
