Created a component to PreviewButton.

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -23,26 +23,7 @@
   }
 
   aside {
-    margin: 88px auto 0;
-
-    a {
-      height: 58px;
-      width: 700px;
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      border-radius: 4px;
-
-      font-weight: 600;
-      font-size: 18px;
-      line-height: 22px;
-      text-align: justify;
-
-      color: var(--background);
-      background: var(--heading);
-    }
+    margin: 88px auto 106px;
   }
 }
 
